# chunktuner

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
docs/: cli_reference.md  configuration.md  faq.md  getting_started_for_implementers.md  index.md  mcp_setup.md  metrics.md  metrics_glossary.md  providers.md  quickstart.md
examples/financial_analysis/: README.md  pyproject.toml  run_benchmark.py
src/chunktuner/: config.py
src/chunktuner/api/: app.py  auth.py  routes.py
src/chunktuner/cache/: chunk_cache.py  embedding_cache.py  wrapped_embeddings.py
src/chunktuner/chunking/: agentic.py  code_ast.py  code_window.py  late_chunking.py  validation.py
src/chunktuner/cli/: __init__.py  cache_cmd.py  common.py  compare_cmd.py  evaluate_cmd.py  init_cmd.py
src/chunktuner/eval/: cost_estimator.py  dataset_builder.py  embeddings.py  evaluator.py  ragas_bridge.py
src/chunktuner/ingestion/: file_ingestor.py  url_ingestor.py
src/chunktuner/mcp/: service.py
src/chunktuner/tuner/: auto_tuner.py  mp_worker.py
tests/integration/: test_cli.py  test_mcp_service.py
tests/unit/: test_api_routes.py  test_cache.py  test_chunking_offsets.py  test_evaluator_metrics.py  test_mp_worker.py  test_url_ingestor.py
