[project]
name = "chunktuner"
version = "0.1.0"
description = "Auto chunking tuner and MCP server for RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["rag", "chunking", "llm", "embeddings", "nlp", "mcp", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "litellm>=1.40",
    "rich>=13.0",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "numpy>=1.26",
    "tenacity>=8.0",
    "tiktoken>=0.7",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.7"]
docling = ["docling>=2.0"]
ragas = ["ragas>=0.1"]
semantic = ["semchunk>=1.0"]
code = ["tree-sitter>=0.22", "tree-sitter-python", "tree-sitter-javascript"]
all = ["chunktuner[mcp,docling,ragas,semantic,code]"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.0",
]

[project.scripts]
chunk-tune = "chunktuner.cli:app"
chunk-tune-mcp = "chunktuner.mcp.server:run"

[project.urls]
Homepage = "https://github.com/shantanu-deshmukh/chunktuner"
Repository = "https://github.com/shantanu-deshmukh/chunktuner"
Issues = "https://github.com/shantanu-deshmukh/chunktuner/issues"
Changelog = "https://github.com/shantanu-deshmukh/chunktuner/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chunktuner"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/chunktuner/cli/**/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "ruff>=0.15.12",
    "mcp[cli]>=1.7",
]
