[project]
name = "financial-analysis-example"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "chunktuner>=0.1.1",
    "datasets>=2.16.0,<4",
    "python-dotenv>=1.0.0",
    "rich>=13",
]

[project.optional-dependencies]
semantic = ["semchunk"]
ragas = ["ragas>=0.1.0,<1"]

[tool.uv.sources]
chunktuner = { path = "../..", editable = true }
